--- a/fbitools.html
+++ b/fbitools.html
@@ -134,7 +134,7 @@
                       <div class="row align-items-center">
                         <div class="col-2">
                           <div class="lua-script--version">
-                            Версия 6.13
+                            Версия 6.14
                           </div>
                         </div>
                         <div class="col-8">
@@ -144,7 +144,7 @@
                         </div>
                         <div class="col-2">
                           <div class="lua-script--date-update" title="Дата обновления">
-                            20.04.2021
+                            28.04.2021
                           </div>
                         </div>
                       </div>
@@ -159,12 +159,12 @@
                       <div class="row">
                         <div class="col-6">
                           <div class="lua-script--version">
-                            Версия 6.13
+                            Версия 6.14
                           </div>
                         </div>
                         <div class="col-6">
                           <div class="lua-script--date-update" title="Дата обновления">
-                            20.04.2021
+                            28.04.2021
                           </div>
                         </div>
                       </div>
@@ -187,53 +187,46 @@
                       <p><strong>FBI Tools</strong> - это многофункциональный скрипт работающий на базе библиотеки 'MoonLoader', написанный на платформе Lua, целью которого является облегчение работы для сотрудников правоохранительных органов. Включает в себя упрощённую систему выдачи розыска за определённую причину, автоматическую Role Play отыгровку при использовании некоторых команд и/или нажатии определённых кнопок, упрощённый диалог с игроками и красивый интерфейс. А так же многие различные функци которые упрощают работу в государственных организациях.</p>
 
                       <hr />
-                      <p><strong>Список стандартный функций:</strong></p>
+                      <p><strong>Список доступных команд:</strong></p>
 
                       <ul>
-                        <li><strong>/pun help</strong> - Инструкция по использованию</li>
-                        <li><strong>/pun</strong> или <strong>/pun [ID]</strong> - Объявить в розыск по выбранной в списке статье</li>
+                        <li><strong>/ft</strong> - Открыть основное меню скрипта</li>
+                        <li><strong>/shp</strong> - Открыть шпаргалку</li>
+                        <li><strong>/fnr</strong> - Созвать сотрудников организации на работу</li>
+                        <li><strong>/fmask</strong> - Быстро натянуть маску ( Оптимизировано под Evolve RP )</li>
+                        <li><strong>/fkv [Сектор]</strong> - Установить метку на определённый квадрат</li>
+                        <li><strong>/ticket</strong> - Открыть меню выдачи штрафов</li>
+                        <li><strong>/dlog</strong> - Открыть лог сообщений рации департамента</li>
+                        <li><strong>/rlog</strong> - Открыть лог сообщений фракционной рации</li>
+                        <li><strong>/sulog</strong> - Открыть лог объявлений в розыск</li>
+                        <li><strong>/smslog</strong> - Открыть лог личных сообщений</li>
+                        <li><strong>/kmdc</strong> - Пробить саспекта по базе данных</li>
+                        <li><strong>/su [ID]</strong> - Объявить в розыск по выбранной в списке статье</li>
+                        <li><strong>/megaf [ID]</strong> или <strong>/st [ID/Опционально]</strong> - Запросить остановку транспортного средства</li>
+                        <li><strong>/ak</strong> - Открыть окно с отображением Административного Кодекса</li>
+                        <li><strong>/yk</strong> - Открыть окно с отображением Уголовного Кодекса</li>
+                        <li><strong>/fp</strong> - Открыть окно с отображением Федерального Постановления</li>
+                        <li><strong>/warn [ID]</strong> - Выдать предупреждение по волне департамента за неправильныую выдачу розыска</li>
+                        <li><strong>/dmb</strong> - Открыть окно с отображением /members</li>
+                        <li><strong>/mb</strong> - Сокращение команды /members</li>
+                        <li><strong>/blg [ID] [Фракция] [Причина]</strong> - Высказать благодарность по волне департамента</li>
+                        <li><strong>/cc</strong> - Очистить чат</li>
+                        <li><strong>/df</strong> - Открыть меню разминирования бомбы</li>
+                        <li><strong>...</strong> - И многие другие команды для облегчения игры</li>
                       </ul>
 
-                      <p><strong>Список расширенных (платных) функций:</strong></p>
-
-                      <ul>
-                        <li><strong>ПКМ (прицелиться в игрока) + Доп.клавиша мыши 2</strong> - Аналог /pun без ввода ID вручную</li>
-                        <li><strong>/sus fasthelp</strong> - Список быстрых статей</li>
-                        <li><strong>ПКМ (прицелиться в игрока) + 0-9</strong> - Объявить в розыск по быстрой статье</li>
-                        <li><strong>Расширенные функции позволяют объявлять в розыск игроков с помощью прицела, не вводя ID, с расстояния 22 метра. Это позволяет минимизировать возможность безнаказанного выхода из игры недобросовестным игроком. А также даёт множество других преимуществ.</strong></li>
-                      </ul>
-
+                      <p><strong>Меню скрипта ( /ft ):</strong></p>
+                      <p> </p>
+                      <img alt="fbitools_info.jpg" data-align="center" data-entity-type="file" src="/themes/custom/light/img/icons/fbitools_info.jpg" />
+                      <p> </p>
+                      <img alt="fbitools_settings.jpg" data-align="center" data-entity-type="file" src="/themes/custom/light/img/icons/fbitools_settings.jpg" />
+                      <p> </p>
+                      <img alt="fbitools_akfpyk.jpg" data-align="center" data-entity-type="file" src="/themes/custom/light/img/icons/fbitools_akfpyk.jpg" />
+                      
                       <hr />
                       <p class="has-medium-font-size"><strong>Редактирование скрипта:</strong></p>
 
-                      <p>Все клавиши меняются в блоке k конфиг файла: "корень\moonloader\config\Super_Punishment_config.lua".</p>
-
-                      <pre>
-<code class="language-lua">
-текст
-</code></pre>
-
-                      <p>&nbsp;</p>
-
-                      <p>Все названия статей, номера, значения розыска, штрафа и дополнительные параметры изменяются в блоке а.</p>
-
-                      <pre>
-<code class="language-lua">
-текст
-</code></pre>
-
-                      <p>&nbsp;</p>
-
-                      <p>Пустое значение переменной c (уровень розыска) устанавливает для текущей статьи только возможность выдачи штрафа. Пустое значение в переменной d (штраф), устанавливает возможность выдачи только розыска. Если в значение переменной d (штраф) установить "+", то сумма штрафа будет вводиться вами в игре вручную. Если сумма штрафа введена в данную переменную, она будет умножаться на уровень игрока. Если в поле перед суммой штрафа стоит знак "/", то сумма штрафа НЕ умножается на уровень игрока.</p>
-
-                      <p>Все названия статей, номера, значения розыска, штрафа и дополнительные параметры быстрых статей изменяются в блоке f.</p>
-
-                      <pre>
-<code class="language-lua">
-текст
-</code></pre>
-
-                      <p>&nbsp;</p>
+                      <p class="has-medium-font-size"><strong>Более подробную информацию можно посмотреть в <a href="https://vk.com/fbitools03">группе</a> скрипта.</strong></p>
 
                     </div>
                   </div>
