--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 				</ul>	
 			</div>		
 			<div class="logo"></div>
-			<div id="wrapper-slider">
+			<!-- <div id="wrapper-slider">
 				<div id="controls">
 					<div class="prev"></div>
 					<div class="next"></div>
 				</div>
-			</div>
+			</div> -->
 			<div class="home-text rotator">
 				<div><h1>Creative solutions</h1></div>
 				<div><h1>Creative ideas</h1></div>
