--- a/index.html
+++ b/index.html
@@ -74,9 +74,8 @@
 				</div>
 			</div> -->
 			<div class="home-text rotator">
-				<div><h1>Creative solutions</h1></div>
-				<div><h1>Creative ideas</h1></div>
-				<div><h1>Creative design</h1></div>
+				<div><h1>vl4sov ml</h1></div>
+				<div><h1>LUA Development Studio</h1></div>
 		 	</div>
 			<div class="link-home"><div class="cl-effect-8"><a href="javascript:goTo('folio');"><span>our works</span></a></div></div>	
 		</article>
