--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 				</div>
 			</div> -->
 			<div class="home-text rotator">
-				<div><h1>vl4sov ml</h1></div>
 				<div><h1>LUA Development Studio</h1></div>
+				<div><h1>Custom scripts</h1></div>
 		 	</div>
 			<div class="link-home"><div class="cl-effect-8"><a href="javascript:goTo('folio');"><span>LUA</span></a></div></div>	
 		</article>
