--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Hestia</title>
+	<title>vl4sov</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -79,23 +79,9 @@
 			
 			<div class='pageblock' id='fullscreen'>
 				<div class='slider'>
-					<div class='slide' id="first">
-						<div class='slidecontent'>
-							<span class="headersur">It's powerful and at the same time a</span>
-							<h1>SIMPLE TEMPLATE</h1>
-						</div>
-					</div>
-					<div class='slide' id="sec">
-						<div class='slidecontent'>
-							<span class="headersur">Grab your shit together and</span>
-							<h1>GET HESTIA</h1>
-						</div>
-					</div>
-					<div class='slide' id="thirth">
-						<div class='slidecontent'>
-							<span class="headersur">Time to start this party</span>
-							<h1>IMAGINE & CREATE</h1>
-						</div>
+					<div class='slidecontent'>
+						<span class="headersur">It's powerful and at the same time a</span>
+						<h1>SIMPLE TEMPLATE</h1>
 					</div>
 				</div>
 			</div>
