--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
 					<div class="clear"></div>
 					<div class="sixteen columns"> 
 						<div class="footer-bottom"> 
-							<p>Copyright © 2014</p>
-							<a href="http://themeforest.net/user/IG_design"><img src="images/logo.png" alt=""/></a>
+							<p>Copyright © 2021</p>
+							<a href="http://vl4sov.ml"><img src="images/logo.png" alt=""/></a>
 						</div>
 					</div>
 				</div>
@@ -609,8 +609,8 @@
 					<div class="clear"></div>
 					<div class="sixteen columns"> 
 						<div class="footer-bottom"> 
-							<p>Copyright © 2014</p>
-							<a href="http://themeforest.net/user/IG_design"><img src="images/logo.png" alt=""/></a>
+							<p>Copyright © 2021</p>
+							<a href="http://vl4sov.ml"><img src="images/logo.png" alt=""/></a>
 						</div>
 					</div>
 				</div>
@@ -757,8 +757,8 @@
 					<div class="clear"></div>
 					<div class="sixteen columns"> 
 						<div class="footer-bottom"> 
-							<p>Copyright © 2014</p>
-							<a href="http://themeforest.net/user/IG_design"><img src="images/logo.png" alt=""/></a>
+							<p>Copyright © 2021</p>
+							<a href="http://vl4sov.ml"><img src="images/logo.png" alt=""/></a>
 						</div>
 					</div>
 				</div>
@@ -855,8 +855,8 @@
 					<div class="clear"></div>
 					<div class="sixteen columns"> 
 						<div class="footer-bottom"> 
-							<p>Copyright © 2014</p>
-							<a href="http://themeforest.net/user/IG_design"><img src="images/logo.png" alt=""/></a>
+							<p>Copyright © 2021</p>
+							<a href="http://vl4sov.ml"><img src="images/logo.png" alt=""/></a>
 						</div>
 					</div>
 				</div>
@@ -1000,8 +1000,8 @@
 					<div class="clear"></div>
 					<div class="sixteen columns"> 
 						<div class="footer-bottom"> 
-							<p>Copyright © 2014</p>
-							<a href="http://themeforest.net/user/IG_design"><img src="images/logo.png" alt=""/></a>
+							<p>Copyright © 2021</p>
+							<a href="http://vl4sov.ml"><img src="images/logo.png" alt=""/></a>
 						</div>
 					</div>
 				</div>
