--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
 				<a href="javascript:goTo('home');">home</a>
 			</li>
 			<li>
-				<a href="javascript:goTo('about');">about</a>
+				<a href="javascript:goTo('about');">info</a>
 			</li>
-			<li> 
+			<!-- <li> 
 				<a href="javascript:goTo('services');">services</a>
 			</li>
 			<li>
 				<a href="javascript:goTo('folio');">portfolio</a>
+			</li> -->
+			<li>
+				<a href="javascript:goTo('contact');">support</a>
 			</li>
 			<li>
-				<a href="javascript:goTo('contact');">contact</a>
-			</li>
-			<li>
-				<a href="javascript:goTo('blog');">blog</a>
+				<a href="javascript:goTo('blog');">lua</a>
 			</li>
 		</ul>
 	</div>	
