--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 						<div class='slidecontent'>
 							<span class="headersur">LUA Development Studio</span>
 							<h1>Custom scripts</h1>
+							<span class="headersur">Developed by Kostya Vlasov</span>
 						</div>
 					</div>
 				</div>
