--- a/index.html
+++ b/index.html
@@ -826,13 +826,13 @@
 		
 			<div class="container">
 				<div class="sixteen columns"> 
-					<h1><span>05</span> blog</h1>
+					<h1>Lua скрипты для SA:MP</h1>
 				</div>	
 			</div>
 			<div class="container">
 				<div class="sixteen columns"> 
-					<h4>LATESTS NEWS</h4>
-					<div class="subtext">description about recent news</div>
+					<div class="subtext">Инструкция по установке</div>
+					<div class="subtext">Частые ошибки</div>
 				</div>	
 			</div>	
 			<ul class="blog-wrap">
