--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
 		
 			<div class="container">
 				<div class="sixteen columns"> 
-					<h1>Lua скрипты для SA:MP</h1>
+					<h1>Lua скрипты</h1>
 				</div>	
 			</div>
 			<div class="container">
@@ -908,51 +908,6 @@
 					</div>	
 				</li>
 			</ul>
-			<div class="container">
-				<div class="sixteen columns"> 
-					<div class="line-separator"></div>
-				</div>
-			</div>
-			<div class="footer">
-				<div class="container">
-					<div class="one-third column"> 
-						<div class="border-right-footer"> 
-							<h6>STUDIO</h6>
-							<p><span class="icon-footer">&#xf041;</span>36000 Kraljevo</p>
-							<p class="padding-left">Nikole Tesle 41</p>
-							<p class="padding-left">Serbia</p>
-							<div class="cl-effect-7">
-								<a href="https://maps.google.com/maps?q=Kraljevo,+Serbia&amp;hl=en&amp;ie=UTF8&amp;sll=43.724452,20.700227&amp;sspn=0.007141,0.016512&amp;hnear=Kraljevo,+Ra%C5%A1ka+District,+Serbia&amp;t=m&amp;z=14"><span>Get directions</span></a>
-							</div>
-						</div>
-					</div>
-					<div class="one-third column"> 
-						<div class="border-right-footer"> 
-							<h6>GET IN TOUCH</h6>
-							<p><span class="icon-footer">&#xf095;</span>+381 648763982</p>
-							<a href="#"><p><span class="icon-footer">&#xf086;</span>office@server.com</p></a>
-							<p>Open Monday to Friday:<br>
-							<span>9:00 - 17:00 (+1.00 GMT)</span></p>
-						</div>
-					</div>
-					<div class="one-third column"> 
-						<h6>FOLLOW</h6>
-						<div class="cl-effect-7">
-							<a href="#"><span class="twitter-color" >twitter</span></a>
-							<a href="#"><span class="google-color" >google +</span></a>
-							<a href="#"><span class="facebook-color" >facebook</span></a>
-							<a href="#"><span class="vimeo-color" >vimeo</span></a>
-						</div>
-					</div>
-					<div class="clear"></div>
-					<div class="sixteen columns"> 
-						<div class="footer-bottom"> 
-							<p>Copyright © 2021</p>
-							<a href="http://vl4sov.ml"><img src="images/logo.png" alt=""/></a>
-						</div>
-					</div>
-				</div>
-			</div>	
 	
 		
 		</article>
