--- a/index.html
+++ b/index.html
@@ -908,6 +908,13 @@
 					</div>	
 				</li>
 			</ul>
+			
+			<div class="sixteen columns"> 
+				<div class="footer-bottom"> 
+					<p>Copyright © 2021</p>
+					<a href="http://vl4sov.ml"><img src="images/logo.png" alt=""/></a>
+				</div>
+			</div>
 	
 		
 		</article>
