--- a/index.html
+++ b/index.html
@@ -909,12 +909,17 @@
 				</li>
 			</ul>
 			
-			<div class="sixteen columns"> 
-				<div class="footer-bottom"> 
-					<p>Copyright © 2021</p>
-					<a href="http://vl4sov.ml"><img src="images/logo.png" alt=""/></a>
+			<div class="footer">
+				<div class="container">
+					<div class="clear"></div>
+					<div class="sixteen columns"> 
+						<div class="footer-bottom"> 
+							<p>Copyright © 2021</p>
+							<a href="http://vl4sov.ml"><img src="images/logo.png" alt=""/></a>
+						</div>
+					</div>
 				</div>
-			</div>
+			</div>	
 	
 		
 		</article>
