--- a/index.html
+++ b/index.html
@@ -831,8 +831,8 @@
 			</div>
 			<div class="container">
 				<div class="sixteen columns"> 
-					<div class="subtext">Инструкция по установке</div>
-					<div class="subtext">Частые ошибки</div>
+					<div class="subtext"><a href="#">Инструкция по установке</a></div>
+					<div class="subtext"><a href="#">Частые ошибки</a></div>
 				</div>	
 			</div>	
 			<ul class="blog-wrap">
@@ -861,52 +861,24 @@
 							</div> 
 						</div>
 						<div class="ten columns"> 
-							<a href="#"><h6>Post Format - Image Gallery</h6></a>
-							<p>22. January 2014. / Posted by: Admin / Comments:3 / Tags: <a href="#">News</a>, <a href="#">Images</a></p>
-							<p><a href="#">Read more...</a></p>
+							<a href="#"><h6>FBI Tools</h6></a>
+							<p>Многофункциональный скрипт работающий на базе библиотеки 'MoonLoader'.</p>
+							<p><a href="#">Подробнее...</a></p>
 						</div>	
 					</div>	
 				</li>
-				<li> 
+				<!-- <li> 
 					<div class="container">
 						<div class="six columns">
 							<img src="images/blog/1.jpg" alt=""/>
 						</div>
 						<div class="ten columns"> 
-							<a href="#"><h6>Post Format - Single Image</h6></a>
-							<p>07. January 2014. / Posted by: Admin / Comments:7 / Tags: <a href="#">News</a>, <a href="#">Images</a></p>
-							<p><a href="#">Read more...</a></p>
+							<a href="#"><h6>Название скрипта</h6></a>
+							<p>Описание скрипта</p>
+							<p><a href="#">Подробнее...</a></p>
 						</div>	
 					</div>	
-				</li>	
-				<li> 
-					<div class="container">
-						<div class="six columns"> 
-							<div class="video-wrap"> 
-								<iframe src="http://player.vimeo.com/video/18130984?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;color=606060" ></iframe>
-							</div>
-						</div>
-						<div class="ten columns"> 
-							<a href="#"><h6>Post Format - Video</h6></a>
-							<p>27. December 2013. / Posted by: Admin / Comments:4 / Tags: <a href="#">News</a>, <a href="#">Video</a></p>
-							<p><a href="#">Read more...</a></p>
-						</div>	
-					</div>	
-				</li>
-				<li> 
-					<div class="container">
-						<div class="six columns"> 
-							<div class="video-wrap"> 
-								<iframe src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F67943430"></iframe>
-							</div>
-						</div>
-						<div class="ten columns"> 
-							<a href="#"><h6>Post Format - Audio</h6></a>
-							<p>15. December 2013. / Posted by: Admin / Comments:9 / Tags: <a href="#">News</a>, <a href="#">Audio</a></p>
-							<p><a href="#">Read more...</a></p>
-						</div>	
-					</div>	
-				</li>
+				</li>	-->
 			</ul>
 			
 			<div class="footer">
