--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<a href="javascript:goTo('about');">info</a>
 			</li>
 			<li>
-				<a href="javascript:goTo('contact');">support</a>
+				<a href="https://vk.me/vl4sovml">support</a>
 			</li>
 			<!-- <li> 
 				<a href="javascript:goTo('services');">services</a>
