--- a/index.html
+++ b/index.html
@@ -100,95 +100,8 @@
 
 			<div class="container">
 				<div class="sixteen columns"> 
-					<h1><span>01</span> about us</h1>
+					<h1>info</h1>
 				</div>	
-			</div>	
-			<div class="container">
-				<div class="sixteen columns"> 
-					<h4>THE CREATIVE PROCESS</h4>
-					<div class="subtext">see each stage of cooperation</div>
-				</div>
-				<div class="clear"></div>
-				<div id="owl-demo" class="owl-carousel owl-theme">
-					<div class="item">
-						<div class="process">
-							<div class="eight columns"> 
-								<h5><span>01</span> idea</h5>
-								<p>Amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
-							</div>	
-							<div class="eight columns"> 
-								<div class="border-wrap"> 
-									<img src="images/bulb.jpg" alt=""/>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="item">
-						<div class="process">
-							<div class="eight columns"> 
-								<h5><span>02</span> Mockups</h5>
-								<p>Amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
-							</div>
-							<div class="eight columns"> 
-								<div class="border-wrap"> 
-									<img src="images/mockups.jpg" alt=""/>
-								</div>	
-							</div>
-						</div>
-					</div>	
-					<div class="item">
-						<div class="process">
-							<div class="eight columns"> 
-								<h5><span>03</span> Design</h5>
-								<p>Amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
-							</div>
-							<div class="eight columns"> 
-								<div class="border-wrap"> 
-									<img src="images/design.jpg" alt=""/>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="item">
-						<div class="process">
-							<div class="eight columns"> 
-								<h5><span>04</span> Development</h5>
-								<p>Amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
-							</div>
-							<div class="eight columns"> 
-								<div class="border-wrap"> 
-									<img src="images/deve.jpg" alt=""/>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="item">
-						<div class="process">
-							<div class="eight columns"> 
-								<h5><span>05</span> Website launch</h5>
-								<p>Amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
-							</div>
-							<div class="eight columns"> 
-								<div class="border-wrap"> 
-									<img src="images/launch.jpg" alt=""/>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="item">
-						<div class="process">
-							<div class="eight columns"> 
-								<h5><span>06</span> cup of coffee</h5>
-								<p>Amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
-							</div>
-							<div class="eight columns"> 
-								<div class="border-wrap"> 
-									<img src="images/coffee.jpg" alt=""/>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
 			</div>	
 			<div class="container">
 				<div class="sixteen columns"> 
@@ -197,135 +110,19 @@
 			</div>	
 			<div class="container">
 				<div class="sixteen columns"> 
-					<h4>MEET US</h4>
-					<div class="subtext">see who you can work with</div>
-				</div>
-				<div class="clear"></div>
-				<div id="owl-demo1" class="owl-carousel owl-theme">
-					<div class="item">
-						<div class="team-wrap">
-							<div class="eight columns"> 
-								<div class="border-wrap"> 
-									<img src="images/team1.jpg" alt=""/>
-								</div>
-							</div>
-							<div class="eight columns"> 
-								<h5><span>founder</span> james bean</h5>
-								<div class="subtext-team">Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit.</div>
-								<p>Amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p> 
-								<div class="social-team">
-									<ul class="team-social">
-										<li class="icon-team"><a href="#">&#xf099;</a></li>
-										<li class="icon-team"><a href="#">&#xf09a;</a></li>
-										<li class="icon-team"><a href="#">&#xf09b;</a></li>
-										<li class="icon-team"><a href="#">&#xf0d5;</a></li>
-									</ul>	
-								</div>	
-							</div>	
-						</div>
-					</div>
-					<div class="item">
-						<div class="team-wrap">
-							<div class="eight columns"> 
-								<div class="border-wrap"> 
-									<img src="images/team2.jpg" alt=""/>
-								</div>	
-							</div>
-							<div class="eight columns"> 
-								<h5><span>designer</span> Isabella moro</h5>
-								<div class="subtext-team">Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit.</div>
-								<p>Amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
-								<div class="social-team">
-									<ul class="team-social">
-										<li class="icon-team"><a href="#">&#xf099;</a></li>
-										<li class="icon-team"><a href="#">&#xf09a;</a></li>
-										<li class="icon-team"><a href="#">&#xf09b;</a></li>
-										<li class="icon-team"><a href="#">&#xf0d5;</a></li>
-									</ul>	
-								</div>
-							</div>
-						</div>
-					</div>	
-					<div class="item">
-						<div class="team-wrap">
-							<div class="eight columns"> 
-								<div class="border-wrap"> 
-									<img src="images/team3.jpg" alt=""/>
-								</div>
-							</div>
-							<div class="eight columns"> 
-								<h5><span>marketing</span> david ive</h5>
-								<div class="subtext-team">Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit.</div>
-								<p>Amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
-								<div class="social-team">
-									<ul class="team-social">
-										<li class="icon-team"><a href="#">&#xf099;</a></li>
-										<li class="icon-team"><a href="#">&#xf09a;</a></li>
-										<li class="icon-team"><a href="#">&#xf09b;</a></li>
-										<li class="icon-team"><a href="#">&#xf0d5;</a></li>
-									</ul>	
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="item">
-						<div class="team-wrap">
-							<div class="eight columns"> 
-								<div class="border-wrap"> 
-									<img src="images/team4.jpg" alt=""/>
-								</div>
-							</div>
-							<div class="eight columns"> 
-								<h5><span>developer</span> caroline smith</h5>
-								<div class="subtext-team">Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit.</div>
-								<p>Amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
-								<div class="social-team">
-									<ul class="team-social">
-										<li class="icon-team"><a href="#">&#xf099;</a></li>
-										<li class="icon-team"><a href="#">&#xf09a;</a></li>
-										<li class="icon-team"><a href="#">&#xf09b;</a></li>
-										<li class="icon-team"><a href="#">&#xf0d5;</a></li>
-									</ul>	
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>	
-			</div>
-			<div class="container">
-				<div class="sixteen columns"> 
-					<div class="line-separator"></div>
+					<div class="subtext">Связаться с разработчиком можно через:</div>
 				</div>
 			</div>
 			<div class="footer">
 				<div class="container">
 					<div class="one-third column"> 
 						<div class="border-right-footer"> 
-							<h6>STUDIO</h6>
-							<p><span class="icon-footer">&#xf041;</span>36000 Kraljevo</p>
-							<p class="padding-left">Nikole Tesle 41</p>
-							<p class="padding-left">Serbia</p>
-							<div class="cl-effect-7">
-								<a href="https://maps.google.com/maps?q=Kraljevo,+Serbia&amp;hl=en&amp;ie=UTF8&amp;sll=43.724452,20.700227&amp;sspn=0.007141,0.016512&amp;hnear=Kraljevo,+Ra%C5%A1ka+District,+Serbia&amp;t=m&amp;z=14"><span>Get directions</span></a>
-							</div>
+							<a href="https://vk.com/vl4sov.kostya"><span class="twitter-color" >Вконтакте</span></a>
 						</div>
 					</div>
 					<div class="one-third column"> 
 						<div class="border-right-footer"> 
-							<h6>GET IN TOUCH</h6>
-							<p><span class="icon-footer">&#xf095;</span>+381 648763982</p>
-							<a href="#"><p><span class="icon-footer">&#xf086;</span>office@server.com</p></a>
-							<p>Open Monday to Friday:<br>
-							<span>9:00 - 17:00 (+1.00 GMT)</span></p>
-						</div>
-					</div>
-					<div class="one-third column"> 
-						<h6>FOLLOW</h6>
-						<div class="cl-effect-7">
-							<a href="#"><span class="twitter-color" >twitter</span></a>
-							<a href="#"><span class="google-color" >google +</span></a>
-							<a href="#"><span class="facebook-color" >facebook</span></a>
-							<a href="#"><span class="vimeo-color" >vimeo</span></a>
+							<a href="https://discord.com/users/vl4sov#2625"><span class="facebook-color" >Discord</span></a>
 						</div>
 					</div>
 					<div class="clear"></div>
