--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 			<div class="container">
 				<div class="sixteen columns"> 
 					<h1>info</h1>
+					<div class="subtext">Студия, занимающаяся разработкой дополнений к GTA SA:MP. Основным направлением студии является разработка Lua скриптов работающих на основе плагина MoonLoader. В открытом доступе уже около десятка наших скриптов, а в приватном или единоличном доступе ещё больше. Студия оказывает услуги разработки Lua скриптов под различные цели.</div>
 				</div>	
 			</div>	
 			<div class="container">
@@ -115,12 +116,12 @@
 			</div>
 			<div class="footer">
 				<div class="container">
-					<div class="one-third column"> 
+					<div class="one-two column"> 
 						<div class="border-right-footer"> 
 							<a href="https://vk.com/vl4sov.kostya"><span class="twitter-color" >Вконтакте</span></a>
 						</div>
 					</div>
-					<div class="one-third column"> 
+					<div class="one-two column"> 
 						<div class="border-right-footer"> 
 							<a href="https://discord.com/users/vl4sov#2625"><span class="facebook-color" >Discord</span></a>
 						</div>
