--- a/index.html
+++ b/index.html
@@ -116,14 +116,19 @@
 			</div>
 			<div class="footer">
 				<div class="container">
-					<div class="one-two column"> 
+					<div class="one-third column"> 
 						<div class="border-right-footer"> 
 							<a href="https://vk.com/vl4sov.kostya"><span class="twitter-color" >Вконтакте</span></a>
 						</div>
 					</div>
-					<div class="one-two column"> 
+					<div class="one-third column"> 
 						<div class="border-right-footer"> 
 							<a href="https://discord.com/users/vl4sov#2625"><span class="facebook-color" >Discord</span></a>
+						</div>
+					</div>
+					<div class="one-third column"> 
+						<div class="border-right-footer"> 
+							<a href="https://vk.com/vl4sovml"><span class="twitter-color" >Вконтакте</span></a>
 						</div>
 					</div>
 					<div class="clear"></div>
