--- a/project.html
+++ b/project.html
@@ -7,7 +7,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Hestia</title>
+	<title>vl4sov</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
