--- a/fbitools.html
+++ b/fbitools.html
@@ -7,7 +7,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Hestia</title>
+	<title>FBI Tools</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -51,30 +51,43 @@
 			<div class="nine columns">
 				<div id="owl-demo-project" class="owl-carousel owl-theme">
 					<div class="item">
-						<img src="images/gallery/4.jpg" alt=""/>	
+						<img src="images/gallery/1.jpg" alt=""/>	
 					</div> 
-					<div class="item">
-						<img src="images/gallery/5.jpg" alt=""/>	
-					</div>
-					<div class="item">
-						<img src="images/gallery/6.jpg" alt=""/>	
-					</div>
 					<div class="item">
 						<img src="images/gallery/2.jpg" alt=""/>	
 					</div>
 					<div class="item">
 						<img src="images/gallery/3.jpg" alt=""/>	
 					</div>
-					<div class="item">
-						<img src="images/gallery/7.jpg" alt=""/>	
-					</div>
 				</div> 
 			</div>
 			<div class="seven columns"> 
-				<h5><span>web design</span> project name</h5>
-				<div class="subtext-project">Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit.</div>
-				<p>Amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p> 
-				<a href="#"><p><span>Visit Site</span></p></a>
+				<h5>FBI Tools</h5>
+				<div class="subtext-project">многофункциональный скрипт работающий на базе библиотеки 'MoonLoader', написанный на платформе Lua, целью которого является облегчение работы для сотрудников правоохранительных органов. Включает в себя упрощённую систему выдачи розыска за определённую причину, автоматическую Role Play отыгровку при использовании некоторых команд и/или нажатии определённых кнопок, упрощённый диалог с игроками и красивый интерфейс. А так же многие различные функци которые упрощают работу в государственных организациях.</div>
+				<p>/ft - Открыть основное меню скрипта</p> 
+				<p>/shp - Открыть шпаргалку</p> 
+				<p>/fnr - Созвать сотрудников организации на работу</p> 
+				<p>/fmask - Быстро натянуть маску ( Оптимизировано под Evolve RP )</p> 
+				<p>/fkv [Сектор] - Установить метку на определённый квадрат</p> 
+				<p>/ticket - Открыть меню выдачи штрафов</p> 
+				<p>/dlog - Открыть лог сообщений рации департамента</p> 
+				<p>/rlog - Открыть лог сообщений фракционной рации</p> 
+				<p>/sulog - Открыть лог объявлений в розыск</p> 
+				<p>/smslog - Открыть лог личных сообщений</p> 
+				<p>/kmdc - Пробить саспекта по базе данных</p> 
+				<p>/su [ID] - Объявить в розыск по выбранной в списке статье</p> 
+				<p>/megaf [ID] или /st [ID/Опционально] - Запросить остановку транспортного средства</p> 
+				<p>/ak - Открыть окно с отображением Административного Кодекса</p> 
+				<p>/yk - Открыть окно с отображением Уголовного Кодекса</p> 
+				<p>/fp - Открыть окно с отображением Федерального Постановления</p> 
+				<p>/warn [ID] - Выдать предупреждение по волне департамента за неправильныую выдачу розыска</p> 
+				<p>/dmb - Открыть окно с отображением /members</p> 
+				<p>/mb - Сокращение команды /members</p> 
+				<p>/blg [ID] [Фракция] [Причина] - Высказать благодарность по волне департамента</p> 
+				<p>/cc - Очистить чат</p> 
+				<p>/df - Открыть меню разминирования бомбы</p> 
+				<p>... - И многие другие команды для облегчения игры</p> 
+				<p>Более подробную информацию можно посмотреть в <a href="https://vk.com/fbitools03"><p><span>группе</span></p></a> скрипта</p>
 			</div>	
 		</div>
 	</div>
