--- a/fbitools.html
+++ b/fbitools.html
@@ -87,7 +87,7 @@
 				<p>/cc - Очистить чат</p> 
 				<p>/df - Открыть меню разминирования бомбы</p> 
 				<p>... - И многие другие команды для облегчения игры</p> 
-				<p>Более подробную информацию можно посмотреть в <a href="https://vk.com/fbitools03"><p><span>группе</span></p></a> скрипта</p>
+				<p>Более подробную информацию можно посмотреть в <a href="https://vk.com/fbitools03"><span>группе</span></a> скрипта</p>
 			</div>	
 		</div>
 	</div>
