--- a/fbitools.html
+++ b/fbitools.html
@@ -63,7 +63,7 @@
 			</div>
 			<div class="seven columns"> 
 				<h5>FBI Tools</h5>
-				<div></div> class="subtext-project">многофункциональный скрипт работающий на базе библиотеки 'MoonLoader', написанный на платформе Lua, целью которого является облегчение работы для сотрудников правоохранительных органов. Включает в себя упрощённую систему выдачи розыска за определённую причину, автоматическую Role Play отыгровку при использовании некоторых команд и/или нажатии определённых кнопок, упрощённый диалог с игроками и красивый интерфейс. А так же многие различные функци которые упрощают работу в государственных организациях.</div>
+				<div class="subtext-project">многофункциональный скрипт работающий на базе библиотеки 'MoonLoader', написанный на платформе Lua, целью которого является облегчение работы для сотрудников правоохранительных органов. Включает в себя упрощённую систему выдачи розыска за определённую причину, автоматическую Role Play отыгровку при использовании некоторых команд и/или нажатии определённых кнопок, упрощённый диалог с игроками и красивый интерфейс. А так же многие различные функци которые упрощают работу в государственных организациях.</div>
 				<p>Список доступных команд:</p> 
 				<p>	</p> 
 				<p>/ft - Открыть основное меню скрипта</p> 
