--- a/about-us-2.html
+++ b/about-us-2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
-    <title>Xavier | amazing web agency / Agency, Portfolio, Blog, Business</title>
+    <title>vl4sov | Информация</title>
 
     <!-- for mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -47,7 +47,7 @@
         <div id="header" class="header-wrapper header1">
             <div class="header-inner-wrapper center">
                 <div class="logo">
-                    <a href="index.html" title=""><img id="logoImage" src="images/logo.png" alt="" title="" /><img id="logoImageRetina" src="images/logo-retina.png" alt="" title="" /></a>
+                    <a href="index.html" title=""><img id="logoImage" src="images/logo.png" width="130" height="40" alt="" title="" /><img id="logoImageRetina" src="images/logo-retina.png" alt="" title="" /></a>
                     <div class="logo-text">We are agency that you need</div>
                 </div> <a class="mobile-menu-show"><i class="fa mobile-menu-icon fa-list"></i></a>
                 <div class="main-menu menu-header1">
