--- a/about-us-2.html
+++ b/about-us-2.html
@@ -48,18 +48,11 @@
             <div class="header-inner-wrapper center">
                 <div class="logo">
                     <a href="index.html" title=""><img id="logoImage" src="images/logo.png" width="130" height="40" alt="" title="" /><img id="logoImageRetina" src="images/logo-retina.png" alt="" title="" /></a>
-                    <div class="logo-text">We are agency that you need</div>
                 </div> <a class="mobile-menu-show"><i class="fa mobile-menu-icon fa-list"></i></a>
                 <div class="main-menu menu-header1">
                     <div class="menu-main-navigation-container">
                         <ul id="menu-main-navigation" class="sf-menu">
-                            <li class="menu-item  menu-item-has-children"><a href="index.html">Home</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item menu-item-home"><a href="index.html">Home diamonds</a></li>
-                                    <li class="menu-item"><a href="home-squares.html">Home squares</a></li>
-                                    <li class="menu-item"><a href="home-square-grid.html">Home squares grid</a></li>
-                                </ul>
-                            </li>
+                            <li class="menu-item  menu-item-has-children"><a href="index.html">Home</a></li>
                             <li class="menu-item current-menu-item "><a href="about-us-2.html">About us</a></li>
                             <li class="menu-item menu-item-has-children"><a href="#">Portfolio</a>
                                 <ul class="sub-menu">
