--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
         <div id="header" class="header-wrapper header1">
             <div class="header-inner-wrapper center">
                 <div class="logo">
-                    <a href="index.html" title=""><img id="logoImage" src="images/logo.png" alt="" title="" /><img id="logoImageRetina" src="images/logo-retina.png" alt="" title="" /></a>
+                    <a href="index.html" title=""><img id="logoImage" src="images/logo.png" width="130" height="40" alt="" title="" /><img id="logoImageRetina" src="images/logo-retina.png" alt="" title="" /></a>
                     <div class="logo-text">We are agency that you need</div>
                 </div> <a class="mobile-menu-show"><i class="fa mobile-menu-icon fa-list"></i></a>
                 <div class="main-menu menu-header1">
@@ -61,15 +61,7 @@
                                 </ul>
                             </li>
                             <li class="menu-item "><a href="about-us-2.html">About us</a></li>
-                            <li class="menu-item menu-item-has-children"><a href="#">Portfolio</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item"><a href="square-2columns.html">Square 2-columns</a></li>
-                                    <li class="menu-item"><a href="square-3-columns.html">Square 3-columns</a></li>
-                                    <li class="menu-item"><a href="square-4-columns.html">Square 4-columns</a></li>
-                                    <li class="menu-item"><a href="diamonds-3columns.html">Diamonds 3-columns</a></li>
-                                    <li class="menu-item"><a href="diamonds-4columns.html">Diamonds 4-columns</a></li>
-                                </ul>
-                            </li>
+                            <li class="menu-item menu-item-has-children"><a href="square-3-columns.html">Portfolio</a></li>
                             <li class="menu-item current-menu-item"><a href="services.html">Services</a></li>
                             <li class="menu-item menu-item-has-children"><a href="#">Blog</a>
                                 <ul class="sub-menu">
