--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                     <li class="menu-item"><a href="standard.html">Standard</a></li>
                                 </ul>
                             </li>
-                            <li class="menu-item"><a href="contact.html">Contact</a></li>
+                            <li class="menu-item"><a href="https://vk.me/vl4sovml">Support</a></li>
                         </ul>
                     </div>
                 </div>
