--- a/index.html
+++ b/index.html
@@ -76,23 +76,9 @@
         <div class="mobile-menu-wrapper">
             <div class="menu-main-navigation-container">
                 <ul id="menu-main-navigation-1" class="mobile-menu">
-                    <li class="menu-item current-menu-item  menu-item-has-children"><a href="index.html">Home</a>
-                        <ul class="sub-menu">
-                            <li class="menu-item current-menu-item menu-item-home"><a href="index.html">Home diamonds</a></li>
-                            <li class="menu-item"><a href="home-squares.html">Home squares</a></li>
-                            <li class="menu-item"><a href="home-square-grid.html">Home squares grid</a></li>
-                        </ul>
-                    </li>
+                    <li class="menu-item current-menu-item  menu-item-has-children"><a href="index.html">Home</a></li>
                     <li class="menu-item"><a href="about-us-2.html">About us</a></li>
-                    <li class="menu-item menu-item-has-children"><a href="#">Portfolio</a>
-                        <ul class="sub-menu">
-                            <li class="menu-item"><a href="square-2columns.html">Square 2-columns</a></li>
-                            <li class="menu-item"><a href="square-3-columns.html">Square 3-columns</a></li>
-                            <li class="menu-item"><a href="square-4-columns.html">Square 4-columns</a></li>
-                            <li class="menu-item"><a href="diamonds-3columns.html">Diamonds 3-columns</a></li>
-                            <li class="menu-item"><a href="diamonds-4columns.html">Diamonds 4-columns</a></li>
-                        </ul>
-                    </li>
+                    <li class="menu-item menu-item-has-children"><a href="square-3-columns.html">Portfolio</a></li>
                     <li class="menu-item"><a href="services.html">Services</a></li>
                     <li class="menu-item menu-item-has-children"><a href="#">Blog</a>
                         <ul class="sub-menu">
@@ -102,7 +88,7 @@
                             <li class="menu-item"><a href="standard.html">Standard</a></li>
                         </ul>
                     </li>
-                    <li class="menu-item"><a href="contact.html">Contact</a></li>
+                    <li class="menu-item"><a href="https://vk.me/vl4sovml">Support</a></li>
                 </ul>
             </div>
         </div>
