--- a/services.html
+++ b/services.html
@@ -57,15 +57,7 @@
                             <li class="menu-item "><a href="about-us-2.html">About us</a></li>
                             <li class="menu-item menu-item-has-children"><a href="square-3-columns.html">Portfolio</a></li>
                             <li class="menu-item current-menu-item"><a href="services.html">Services</a></li>
-                            <li class="menu-item menu-item-has-children"><a href="#">Blog</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item"><a href="grid.html">Grid</a></li>
-                                    <li class="menu-item"><a href="masonry-with-sidebar.html">Masonry with sidebar</a></li>
-                                    <li class="menu-item"><a href="masonry-with-filter.html">Masonry with filter</a></li>
-                                    <li class="menu-item"><a href="standard.html">Standard</a></li>
-                                </ul>
-                            </li>
-                            <li class="menu-item"><a href="contact.html">Contact</a></li>
+                            <li class="menu-item"><a href="https://vk.me/vl4sovml">Support</a></li>
                         </ul>
                     </div>
                 </div>
@@ -85,25 +77,9 @@
                         </ul>
                     </li>
                     <li class="menu-item "><a href="about-us-2.html">About us</a></li>
-                    <li class="menu-item menu-item-has-children"><a href="#">Portfolio</a>
-                        <ul class="sub-menu">
-                            <li class="menu-item"><a href="square-2columns.html">Square 2-columns</a></li>
-                            <li class="menu-item"><a href="square-3-columns.html">Square 3-columns</a></li>
-                            <li class="menu-item"><a href="square-4-columns.html">Square 4-columns</a></li>
-                            <li class="menu-item"><a href="diamonds-3columns.html">Diamonds 3-columns</a></li>
-                            <li class="menu-item"><a href="diamonds-4columns.html">Diamonds 4-columns</a></li>
-                        </ul>
-                    </li>
+                    <li class="menu-item menu-item-has-children"><a href="square-3-columns.html">Portfolio</a></li>
                     <li class="menu-item current-menu-item "><a href="services.html">Services</a></li>
-                    <li class="menu-item menu-item-has-children"><a href="#">Blog</a>
-                        <ul class="sub-menu">
-                            <li class="menu-item"><a href="grid.html">Grid</a></li>
-                            <li class="menu-item"><a href="masonry-with-sidebar.html">Masonry with sidebar</a></li>
-                            <li class="menu-item"><a href="masonry-with-filter.html">Masonry with filter</a></li>
-                            <li class="menu-item"><a href="standard.html">Standard</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-item"><a href="contact.html">Contact</a></li>
+                    <li class="menu-item"><a href="https://vk.me/vl4sovml">Support</a></li>
                 </ul>
             </div>
         </div>
