--- a/singleport-img.html
+++ b/singleport-img.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
-    <title>Xavier | amazing web agency / Agency, Portfolio, Blog, Business</title>
+    <title>vl4sov | script</title>
 
     <!-- for mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -47,39 +47,17 @@
         <div id="header" class="header-wrapper header1">
             <div class="header-inner-wrapper center">
                 <div class="logo">
-                    <a href="index.html" title=""><img id="logoImage" src="images/logo.png" alt="" title="" /><img id="logoImageRetina" src="images/logo-retina.png" alt="" title="" /></a>
+                    <a href="index.html" title=""><img id="logoImage" src="images/logo.png" width="130" height="40" alt="" title="" /><img id="logoImageRetina" src="images/logo-retina.png" alt="" title="" /></a>
                     <div class="logo-text">We are agency that you need</div>
                 </div> <a class="mobile-menu-show"><i class="fa mobile-menu-icon fa-list"></i></a>
                 <div class="main-menu menu-header1">
                     <div class="menu-main-navigation-container">
                         <ul id="menu-main-navigation" class="sf-menu">
-                            <li class="menu-item  menu-item-has-children"><a href="index.html">Home</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item menu-item-home"><a href="index.html">Home diamonds</a></li>
-                                    <li class="menu-item"><a href="home-squares.html">Home squares</a></li>
-                                    <li class="menu-item"><a href="home-square-grid.html">Home squares grid</a></li>
-                                </ul>
-                            </li>
+                            <li class="menu-item  menu-item-has-children"><a href="index.html">Home</a></li>
                             <li class="menu-item"><a href="about-us-2.html">About us</a></li>
-                            <li class="menu-item menu-item-has-children"><a href="#">Portfolio</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item"><a href="square-2columns.html">Square 2-columns</a></li>
-                                    <li class="menu-item"><a href="square-3-columns.html">Square 3-columns</a></li>
-                                    <li class="menu-item"><a href="square-4-columns.html">Square 4-columns</a></li>
-                                    <li class="menu-item"><a href="diamonds-3columns.html">Diamonds 3-columns</a></li>
-                                    <li class="menu-item"><a href="diamonds-4columns.html">Diamonds 4-columns</a></li>
-                                </ul>
-                            </li>
+                            <li class="menu-item menu-item-has-children"><a href="square-3-columns.html">Portfolio</a></li>
                             <li class="menu-item"><a href="services.html">Services</a></li>
-                            <li class="menu-item menu-item-has-children"><a href="#">Blog</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item"><a href="grid.html">Grid</a></li>
-                                    <li class="menu-item"><a href="masonry-with-sidebar.html">Masonry with sidebar</a></li>
-                                    <li class="menu-item"><a href="masonry-with-filter.html">Masonry with filter</a></li>
-                                    <li class="menu-item"><a href="standard.html">Standard</a></li>
-                                </ul>
-                            </li>
-                            <li class="menu-item"><a href="contact.html">Contact</a></li>
+                             <li class="menu-item"><a href="https://vk.me/vl4sovml">Support</a></li>
                         </ul>
                     </div>
                 </div>
@@ -91,33 +69,11 @@
         <div class="mobile-menu-wrapper">
             <div class="menu-main-navigation-container">
                 <ul id="menu-main-navigation-1" class="mobile-menu">
-                    <li class="menu-item  menu-item-has-children"><a href="index.html">Home</a>
-                        <ul class="sub-menu">
-                            <li class="menu-item menu-item-home"><a href="index.html">Home diamonds</a></li>
-                            <li class="menu-item"><a href="home-squares.html">Home squares</a></li>
-                            <li class="menu-item"><a href="home-square-grid.html">Home squares grid</a></li>
-                        </ul>
-                    </li>
+                    <li class="menu-item  menu-item-has-children"><a href="index.html">Home</a></li>
                     <li class="menu-item"><a href="about-us-2.html">About us</a></li>
-                    <li class="menu-item menu-item-has-children"><a href="#">Portfolio</a>
-                        <ul class="sub-menu">
-                            <li class="menu-item"><a href="square-2columns.html">Square 2-columns</a></li>
-                            <li class="menu-item"><a href="square-3-columns.html">Square 3-columns</a></li>
-                            <li class="menu-item"><a href="square-4-columns.html">Square 4-columns</a></li>
-                            <li class="menu-item"><a href="diamonds-3columns.html">Diamonds 3-columns</a></li>
-                            <li class="menu-item"><a href="diamonds-4columns.html">Diamonds 4-columns</a></li>
-                        </ul>
-                    </li>
+                    <li class="menu-item menu-item-has-children"><a href="square-3-columns.html">Portfolio</a></li>
                     <li class="menu-item"><a href="services.html">Services</a></li>
-                    <li class="menu-item menu-item-has-children"><a href="#">Blog</a>
-                        <ul class="sub-menu">
-                            <li class="menu-item"><a href="grid.html">Grid</a></li>
-                            <li class="menu-item"><a href="masonry-with-sidebar.html">Masonry with sidebar</a></li>
-                            <li class="menu-item"><a href="masonry-with-filter.html">Masonry with filter</a></li>
-                            <li class="menu-item"><a href="standard.html">Standard</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-item"><a href="contact.html">Contact</a></li>
+                     <li class="menu-item"><a href="https://vk.me/vl4sovml">Support</a></li>
                 </ul>
             </div>
         </div>
