--- a/services.html
+++ b/services.html
@@ -53,7 +53,6 @@
                     <div class="menu-main-navigation-container">
                         <ul id="menu-main-navigation" class="sf-menu">
                             <li class="menu-item  menu-item-has-children"><a href="index.html">Home</a></li>
-                            <li class="menu-item "><a href="about-us-2.html">About us</a></li>
                             <li class="menu-item menu-item-has-children"><a href="square-3-columns.html">Portfolio</a></li>
                             <li class="menu-item current-menu-item"><a href="services.html">Services</a></li>
                             <li class="menu-item"><a href="https://vk.me/vl4sovml">Support</a></li>
@@ -68,14 +67,7 @@
         <div class="mobile-menu-wrapper">
             <div class="menu-main-navigation-container">
                 <ul id="menu-main-navigation-1" class="mobile-menu">
-                    <li class="menu-item menu-item-has-children"><a href="index.html">Home</a>
-                        <ul class="sub-menu">
-                            <li class="menu-item"><a href="index.html">Home diamonds</a></li>
-                            <li class="menu-item"><a href="home-squares.html">Home squares</a></li>
-                            <li class="menu-item"><a href="home-square-grid.html">Home squares grid</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-item "><a href="about-us-2.html">About us</a></li>
+                    <li class="menu-item menu-item-has-children"><a href="index.html">Home</a></li>
                     <li class="menu-item menu-item-has-children"><a href="square-3-columns.html">Portfolio</a></li>
                     <li class="menu-item current-menu-item "><a href="services.html">Services</a></li>
                     <li class="menu-item"><a href="https://vk.me/vl4sovml">Support</a></li>
