--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     <div class="menu-main-navigation-container">
                         <ul id="menu-main-navigation" class="sf-menu">
                             <li class="menu-item current-menu-item  menu-item-has-children"><a href="index.html">Home</a></li>
-                            <li class="menu-item menu-item-has-children"><a href="square-3-columns.html">Portfolio</a></li>
-                            <li class="menu-item"><a href="services.html">Services</a></li>
+                            <li class="menu-item menu-item-has-children"><a href="square-3-columns.html">Lua</a></li>
+                            <li class="menu-item"><a href="services.html">Info</a></li>
                             <li class="menu-item"><a href="https://vk.me/vl4sovml">Support</a></li>
                         </ul>
                     </div>
@@ -68,8 +68,8 @@
             <div class="menu-main-navigation-container">
                 <ul id="menu-main-navigation-1" class="mobile-menu">
                     <li class="menu-item current-menu-item  menu-item-has-children"><a href="index.html">Home</a></li>
-                    <li class="menu-item menu-item-has-children"><a href="square-3-columns.html">Portfolio</a></li>
-                    <li class="menu-item"><a href="services.html">Services</a></li>
+                    <li class="menu-item menu-item-has-children"><a href="square-3-columns.html">Lua</a></li>
+                    <li class="menu-item"><a href="services.html">Info</a></li>
                     <li class="menu-item"><a href="https://vk.me/vl4sovml">Support</a></li>
                 </ul>
             </div>
