--- a/errors.html
+++ b/errors.html
@@ -189,12 +189,12 @@
     <div class="push">
     </div>
 
-    <footer class="footer">
-      <div class="footer-wrap">
-        <span class="footer-copyright"><a href="/">vl4sov.ml</a> © 2020-2021</span>
-
-      </div>
-    </footer>
+      <footer class="footer">
+        <div class="footer-wrap">
+          <div class="footer-copyright"><a href="https://vl4sov.ml">vl4sov</a> © 2016–2021</div>
+          <div class="footer-copyright">Developed by <a href="https://narvell.nl/">NARVELL DEV</a></div>
+        </div>
+      </footer>
 
   </div>
 
