--- a/lua.html
+++ b/lua.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>LUA | vl4sov.ml</title>
+  <title>vl4sov | Скрипты</title>
   <meta property="og:title" content="LUA | vl4sov.ml" />
   <meta name="MobileOptimized" content="width" />
   <meta name="HandheldFriendly" content="true" />
