--- a/lua.html
+++ b/lua.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>vl4sov | Скрипты</title>
-  <meta property="og:title" content="LUA | vl4sov.ml" />
+  <meta property="og:title" content="vl4sov | Скрипты" />
   <meta name="MobileOptimized" content="width" />
   <meta name="HandheldFriendly" content="true" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
