--- a/terms.html
+++ b/terms.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="/themes/custom/light/favicon.ico" type="image/vnd.microsoft.icon" />
 
-  <title>vl4sov | Пользовательское соглашение</title>
+  <title>Пользовательское соглашение</title>
   <link rel="stylesheet" media="all" href="/themes/custom/light/css/css1.css" />
   <link rel="stylesheet" media="all" href="//fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;display=swap&amp;subset=cyrillic" />
   <link rel="stylesheet" media="all" href="//fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@0,300;0,700;1,300&amp;display=swap&amp;subset=cyrillic" />
