--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <meta name="msapplication-TileColor" content="#4a4a4a">
   <meta name="msapplication-TileImage" content="/themes/custom/light/img/icons/apple-icon-144x144.png">
-  <meta name="theme-color" content="#dddddd">
+  <meta name="theme-color" content="#4a4a4a">
 
   <meta property="og:site_name" content="vl4sov.ml" />
   <meta property="og:type" content="website" />
