--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <div class="row align-items-center">
                           <div class="col-3">
                             <div class="main-page--news--note-date">
-                              28.04.2021
+                              08.05.2021
                             </div>
                           </div>
                           <div class="col-6">
@@ -173,7 +173,7 @@
                           </div>
                           <div class="col-3">
                             <div class="main-page--news--note-section">
-                              version 6.14
+                              version 6.16
                             </div>
                           </div>
                         </div>
@@ -188,21 +188,23 @@
                         <div class="row">
                           <div class="col-6">
                             <div class="main-page--news--note-date">
-                              30.05.2020
+                              08.05.2021
                             </div>
                           </div>
                           <div class="col-6">
                             <div class="main-page--news--note-section">
-                              version 6.14
+                              version 6.16
                             </div>
                           </div>
                         </div>
                       </div>
 
                       <div class="main-page--news--note-content">
-                        <p>— Пофикшено отображение курсора в imgui</p>
-                        <p>— Вернул старую систему /mrk</p>
-                        <p>— Переименовано значение {mark} на {mrk}</p>
+                      <p>• Пофиксил отображение таймеров</p>
+                      <p>• Добавил возможность изменения положени информации при патруле</p>
+                      <p>• Пофиксил выключение маркера при окончании патруля</p>
+                      <p>• Временно убрана база данных в связи с доработкой</p>
+                      <p>• Добавлен счётчик онлайна на работе, на выходном и общий за день</p>
 
                       </div>
                     </div>
