--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <div class="row align-items-center">
                           <div class="col-3">
                             <div class="main-page--news--note-date">
-                              08.05.2021
+                              12.05.2021
                             </div>
                           </div>
                           <div class="col-6">
@@ -173,7 +173,7 @@
                           </div>
                           <div class="col-3">
                             <div class="main-page--news--note-section">
-                              version 6.16
+                              version 6.17
                             </div>
                           </div>
                         </div>
@@ -188,23 +188,23 @@
                         <div class="row">
                           <div class="col-6">
                             <div class="main-page--news--note-date">
-                              08.05.2021
+                              12.05.2021
                             </div>
                           </div>
                           <div class="col-6">
                             <div class="main-page--news--note-section">
-                              version 6.16
+                              version 6.17
                             </div>
                           </div>
                         </div>
                       </div>
 
                       <div class="main-page--news--note-content">
-                      <p>• Пофиксил отображение таймеров</p>
-                      <p>• Добавил возможность изменения положени информации при патруле</p>
-                      <p>• Пофиксил выключение маркера при окончании патруля</p>
-                      <p>• Временно убрана база данных в связи с доработкой</p>
-                      <p>• Добавлен счётчик онлайна на работе, на выходном и общий за день</p>
+                      <p>• Добавлена возможность отключения всплывающих уведомлений notf</p>
+                      <p>• Добавлена возможность изменения шрифта и размера текста информации патруля</p>
+                      <p>• Добавлено взаимодействие с окружением на кнопку B ( Её кастомизация будет добавлена в последующих версиях. Пока только доступные функции в тестовом варианте. Для открытия меню подойдите к Игроку или Автомобилю и зажмите B )</p>
+                      <p>• Добавлена новая система запроса поддержки в F2</p>
+                      <p>• Пофиксил отображение всплывающего текста при погоне и выдачи автоматического розыска</p>
 
                       </div>
                     </div>
