--- a/fbitools.html
+++ b/fbitools.html
@@ -282,7 +282,7 @@
 
                       <div class="col">
                         <div class="lua-button">
-                          <a class="btn btn-outline-primary lua-download-btn" href="https://github.com/vl4sov/fbitools/raw/master/FBI%20Tools.rar">
+                          <a class="btn btn-outline-primary lua-download-btn" href="https://vl4sov.ml/FBITools/FBITools.zip">
       Скачать
     </a>
                         </div>
